fix: prevent scrollbar hiding hack from covering images

--- a/components/PhotographyPage/PhotographyPageSlide/PhotographyPageSlide.scss
+++ b/components/PhotographyPage/PhotographyPageSlide/PhotographyPageSlide.scss
@@ -22,6 +22,7 @@
 
     @media (min-width: 850px) and (max-height: 1280px) {
         padding: 100px 0 40px 0;
+        grid-gap: 3px;
     }
 
     .images_container {
@@ -59,8 +60,8 @@
 
             @media (max-width: $desktop-max-width) {
                 grid-auto-columns: calc(100% - ($horizontal-padding * 2));
-                padding: 0 40px;
-                scroll-padding: 0 40px;
+                padding: 0 40px 20px;
+                scroll-padding: 0 40px 20px;
             }
 
             @media (max-width: 850px) {
